feat:category softdeltes
